# gconf-editor

./: Makefile  README.md  fix-crash.patch  gconf-editor.spec
src/: ChangeLog  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.in
src/data/: Makefile.in  gconf-editor.desktop.in
src/data/icons/: Makefile.am  Makefile.in
src/docs/: Makefile.am  Makefile.in
src/po/: LINGUAS  as.po  bn.po  bn_IN.po  ca.po  ca@valencia.po  de.po  eu.po  fa.po  gl.po  gu.po  he.po  id.po  ja.po  kn.po  ko.po  ku.po  mn.po  nb.po  pl.po  ro.po  sk.po  sl.po  sv.po  ug.po  zh_HK.po  zh_TW.po
src/src/: Makefile.am  Makefile.in  gconf-bookmarks-dialog.c  gconf-bookmarks.c  gconf-cell-renderer.c  gconf-editor-application.c  gconf-editor-window.c  gconf-key-editor.c  gconf-key-editor.h  gconf-list-model.c  gconf-policykit.c  gconf-search-dialog.c  gconf-search.c
